--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -26,6 +26,8 @@ body {
     display: flex;
     width: 80%;
     margin: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .header .container { /*Quero que dentro da tag header, mexa no container*/
@@ -123,4 +125,98 @@ body {
 
 .version {
     font-size: 12px;
+}
+
+.card {
+    width: 55%;
+    height: 30%;
+    justify-content: center;
+    display: flex;
+    border-radius: 20px;
+}
+
+.card-login {
+    display: flex;
+    background-color: #e5e5e5;
+    align-items: center;
+    flex-direction: column;
+    color: #D56D8E;
+    padding: 55px 30px;
+    align-content: stretch;
+}
+
+.campo{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 15px;
+    font-weight: 800;
+    justify-content:center;
+}
+
+.container .card{
+    display: flex;
+    flex-direction: center;
+}
+
+.formulario {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 100px;
+    align-items: center;
+    justify-items: center;
+}
+
+.campo {
+    align-items: flex-start;
+    justify-content: center;
+    justify-items: flex-start;
+}
+
+.campo .botao {
+    display:flex;
+    background-color: #D56D8E;
+    color: white;
+    flex-direction: center;
+}
+
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input {
+    width: 500px;
+    height: 30px;
+    border-radius: 10px;
+    border: 2px solid #32b9cd;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+button {
+    background-color: rgb(203, 36, 133);
+    color: white;
+    justify-content: center;
+    width: 120px;
+    height: 25px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    margin-top: 5px;
+}
+
+.card-cadastro {
+    display: flex;
+    background-color: #e5e5e5;
+    align-items: center;
+    flex-direction: column;
+    color: #D56D8E;
+    padding: 135px 30px;
+    align-content: stretch;
+
 }
